# SDGP_team3_BE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-production.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml  pr-checks.yml
app/: config.py  main.py
app/controllers/: challenge_controller.py  decoration_controller.py  decoration_user_controller.py  google_controller.py  stamp_controller.py  user_controller.py  vision_controller.py
app/core/: auth.py  oauth.py
app/database/: database.py  fake_data.py
app/dto/: user_dto.py
app/models/: challenge_model.py  challenge_stamp_model.py  decoration_model.py  decoration_user_model.py  stamp_model.py  user_model.py
app/repositories/: challenge_repository.py  challenge_stamp_repository.py  decoration_repository.py  decoration_user_repository.py  stamp_repository.py  user_repository.py
app/services/: challenge_service.py  decoration_service.py  decoration_user_service.py  gemini_service.py  google_service.py  stamp_service.py  user_service.py  vision_service.py
deploy/: run_in_production.sh  run_in_test.sh
migrations/: migrate.py  run_docker_postgres.sh
migrations/sql/: 001_create_users_table.sql  002_add_is_superuser_column.sql  003_create_decorations_table.sql  004_create_challenges_table.sql  005_create_stamps_table.sql  006_create_decoration_user_table.sql  007_create_challenge_decoration_table.sql  008_create_challenge_stamp_table.sql
test/: conftest.py
test/test_controllers/: test_user_controller.py
test/test_services/: test_user_service.py
