[tool.poetry]
name = "sdgp-team3-be"
version = "0.1.0"
description = ""
authors = ["etkim <ket0825@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.6"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88         
target-version = ['py39']
include = '\.pyi?$'      
exclude = '''            
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = false  
skip-magic-trailing-comma = false  
preview = false   

[tool.mypy]
python_version = "3.9"               
disallow_untyped_defs = true         
disallow_incomplete_defs = true      
check_untyped_defs = true            
disallow_untyped_decorators = true   
no_implicit_optional = true          
strict_optional = true               
warn_redundant_casts = true          
warn_unused_ignores = true           
warn_return_any = true               
warn_unused_configs = true           
plugins = ["pydantic.mypy"]          

[[tool.mypy.overrides]]
module = "tests.*"                   
disallow_untyped_defs = false        
disallow_incomplete_defs = false

[tool.pylint.main]
ignore = ["CVS", ".git", ".venv"]        
jobs = 0                                 
persistent = true                        

[tool.pylint.messages_control]
disable = [                               
    "missing-docstring",                  
    "invalid-name",                       
    "too-few-public-methods",             
    "fixme",                              
]
enable = [                                
    "useless-suppression",                
]

[tool.pylint.reports]
output-format = "text"                    
reports = false                           

[tool.pylint.format]
max-line-length = 88                      
ignore-long-lines = "^\\s*(# )?.*$"   
single-line-if-stmt = false           

[tool.pylint.design]
max-args = 8                          

[tool.pylint.variables]
init-import = false                   
dummy-variables-rgx = "_$|dummy"      
ignored-argument-names = "_.*"        

[tool.pylint.similarities]
min-similarity-lines = 4              
ignore-comments = true                
ignore-docstrings = true              
ignore-imports = true                 

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
